rnsc/tests/snapshots/error-lexer-integers-invalid_format_mixed_werror.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code 12a34
----- STDERR -----
Error: invalid integer
   ╭─[ test_data/integration/error/lexer/integers/invalid_format_mixed.rns:1:7 ]
   │
 1 │ .code 12a34
   │       ──┬──  
   │         ╰──── '12a34' contains invalid characters
   │ 
   │ Note: Integers must be between -2147483648 and 2147483647
───╯
----- HASH -----
not generated
